--- a/forms/form.html
+++ b/forms/form.html
@@ -89,7 +89,7 @@
             </div>
 
             <div class="form-outer">
-                <form action="https://formsubmit.co/bshakex@gmail.com" method="POST">
+                <form action="https://formsubmit.co/shakex@syntex.co.za" method="POST">
                     <div class="page slide-page">
                         <!-- BASIC INFO -->
                         <div class="title">
@@ -197,7 +197,7 @@
                     <!-- form options -->
                     <input type="hidden" name="_subject" value="New submission!">
                     <input type="hidden" name="_autoresponse" value="your form has been received.">
-                    <input type="hidden" name="_next" value="http://shakexsempe.netlify.app/thanks.html">
+                    <input type="hidden" name="_next" value="http://syntex.co.za/thanks.html">
                     <input type="hidden" name="_template" value="table">
                 </form>
             </div>
