--- a/index.html
+++ b/index.html
@@ -459,8 +459,8 @@
           </div>
           <h1>Email</h1>
           <div class="contact-info">
-            <h2>bshakex@gmail.com</h2>
-            <a href="mailto:shakex@syntex.co.za" title="send email to Shakex"><i class="fas fa-at"></i> ..email me</a>
+            <h2>shakex@syntex.co.za</h2>
+            <a href="mailto:shakex@syntex.co.za" title="Send Email to shakex@syntex.co.za"><i class="fas fa-at"></i> ..email me</a>
           </div>
         </article>
 
@@ -577,7 +577,7 @@
   <!-- form options -->
   <input type="hidden" name="_subject" value="New submission!">
   <input type="hidden" name="_autoresponse" value="Shakex has received your form">
-  <input type="hidden" name="_next" value="http://shakexsempe.netlify.app/thanks.html">
+  <input type="hidden" name="_next" value="http://syntex.co.za/thanks.html">
   <input type="hidden" name="_template" value="table">
   <input type="text" name="_honey" style="display:none">
 
