--- a/index.html
+++ b/index.html
@@ -146,8 +146,11 @@
       </div>
       <div data-scroll class="skills-top">
         <p>
-          I'm a Front End Developer focused on Responsive Web Design and UX Experience.<br>
-          I code immersive webpages using HTML5 semantic markup, advanced CSS3 and Javascript.
+          I'm a Front End Web Developer focused on Responsive Web Design and User Experience.<br>
+          I code webpages that are: <br>
+          <span>Accessible</span> using HTML5 semantic markup and SEO techniques.<br>
+          <span>Immersive</span> through Sass preprocessed stylesheets and <br>
+          <span>Engaging</span> via Javascript algorithms.
           <br><br><span>View my full skill set in the dropdown section below.</span>
         </p>
       </div>
