removed blank links for forms

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
               <li>
                 <i class="fas fa-at"></i>
-                <a href="forms/form.html" title="contact-form" target="_blank" data-after="form" class="scroll-li">form</a>
+                <a href="forms/form.html" title="contact-form" data-after="form" class="scroll-li">form</a>
               </li>
 
             </ul>
@@ -421,7 +421,7 @@
         <button id="readBtn" title="more about boitumelo">read more</button>
 
         <article id="cv">
-          <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" title='linkedin' target="_blank" class="fcc-link">
+          <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" title='linkedin' class="fcc-link">
             <i class="fab fa-linkedin-in" aria-hidden="true"></i>Linkedin
           </a>
           <a href="forms/form.html" title="request cv" target="_blank" class="fcc-link">
