--- a/thanks.html
+++ b/thanks.html
@@ -37,7 +37,7 @@
         <div class="header container">
             <nav id="navbar">
                 <div class="brand">
-                    <a href="/index.html">
+                    <a href="index.html">
                         <h1><span>S</span>hakex <span>S</span>empe</h1>
                     </a>
                 </div>
