--- a/index.html
+++ b/index.html
@@ -370,14 +370,49 @@
   <section class="link-section" id="projects">
     <div class="projects container">
       <div class="projects-header">
-        <h1 title="repository links" data-text="projects" id="projects-h1" class="section-title">Projects</h1>
+        <h1 title="repository links" data-text="portfolio" id="projects-h1" class="section-title">Port<span>f</span>olio</h1>
       </div>
       <div data-scroll class="all-projects">
         <!-- /PROJECTS.JS -->
       </div>
+    </div>
   </section>
   <!--End of Projects Section-->
-
+  <!-- WORK / PORTFOLIO -->
+  <section id="work"> 
+    <div class="work">
+      <div class="work-header">
+        <h1 data-text="projects" class="section-title">pro<span>j</span>ects</h1>
+      </div>
+      <div class="work-items">
+        <!-- ORICH -->
+        <div class="work-item">
+          <h2 class="work-title">Orich Trading & projects</h2>
+          <figure>
+            <img src="img/orich.jpg" alt="Orich trading & projects">
+          </figure>
+          <a href="https://shakexsempe.github.io/orich-trading/" target="_blank">view website</a>
+        </div>
+        <!-- MUNCH UP -->
+        <div class="work-item">
+          <h2 class="work-title">Munch Up</h2>
+          <figure>
+            <img src="img/munch-logo-min.jpg" alt="Munch Up-logo">
+          </figure>
+          <a href="https://munch-up.netlify.app/" target="_blank">view website</a>
+        </div>
+        <!-- MUNCH UP -->
+        <div class="work-item">
+          <h2 class="work-title">Ngoveni Construction</h2>
+          <figure>
+            <img src="img/mkansi.png" alt="Orich trading & projects">
+          </figure>
+          <a href="https://shakexsempe.github.io/ngoveni-construction/" target="_blank">view website</a>
+        </div>
+        
+      </div>
+    </div>
+  </section>
   <!--About Section-->
   <section class="link-section" id="about">
     <!-- padding section -->
@@ -432,7 +467,8 @@
           </a>
         </article>
       </div>
-      </div>
+    </div>
+  </div>
   </section>
   <!--End of About Section-->
 
