--- a/index.html
+++ b/index.html
@@ -149,14 +149,17 @@
         <h1 title="skills" data-text="skills" class="section-title">Sk<span>i</span>lls</h1>
       </div>
       <div data-scroll class="skills-top">
+        <div class="skills-info">
         <p>
           I'm a Front End Web Developer focused on Responsive Web Design and User Experience.<br>
           I code webpages that are: <br>
           <span>Accessible</span> using HTML5 semantic markup and SEO techniques.<br>
           <span>Immersive</span> through Sass preprocessed stylesheets and <br>
           <span>Engaging</span> via Javascript algorithms.
-          <br><br><span>View my full skill set in the dropdown section below.</span>
+          <br><br>
         </p>
+      </div>
+        <div class="skills-drop"><p class="skills-drop-p">View my full skill set in the dropdown section below.</p></div>
       </div>
       <!--Dropdown-->
       <div class="dropdown">
