work box shadows and links container overflow

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               </li>
               <!-- WORK[PROJECTS] LINK -->
               <li>
-                <i class="fab fa-github"></i>
+                <i class="fa-solid fa-earth-africa"></i>
                 <a href="#work" title="github repositories" data-after="Projects" class="scroll-link scroll-li">projects</a>
               </li>
              <!-- SKILLS LINK -->
@@ -151,7 +151,7 @@
       <div data-scroll class="skills-top">
         <div class="skills-info">
         <p>
-          I'm a Front End Web Developer focused on Responsive Web Design and User Experience.<br>
+          I'm a Web Developer focused on Responsive Web Design and User Experience.<br>
           I code webpages that are: <br>
           <span>Accessible</span> using HTML5 semantic markup and SEO techniques.<br>
           <span>Immersive</span> through Sass preprocessed stylesheets and <br>
@@ -423,14 +423,7 @@
   </section>
   <!--About Section-->
   <section class="link-section" id="about">
-    <!-- padding section -->
-  <div class="section-pad pad-me">
-    <figure data-scroll>
-      <a title="me: boitumelo sempe" href="#about-target">
-        <img src="img/me-min.jpg" loading="lazy" alt="Boitumelo Sempe">
-      </a>
-    </figure>
-  </div>
+    
   <!-- end of padding section -->
     <div id="about-target" class="about container">
       <div class="col-right">
@@ -479,7 +472,12 @@
   </div>
   </section>
   <!--End of About Section-->
-
+<!-- padding section -->
+<div class="section-pad pad-me">
+  <figure data-scroll>
+      <img src="img/me-min.jpg" loading="lazy" alt="Boitumelo Sempe">
+  </figure>
+</div>
   <!--Contact Section-->
   <section class="link-section" id="contact">
     
