--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <div data-scroll class="skills-top">
         <div class="skills-info">
         <p>
-          I'm a Web Developer focused on Responsive Web Design and User Experience.<br>
+          I'm a Front-End Web Developer focused on Responsive Web Design and User Experience.<br>
           I code webpages that are: <br>
           <span>Accessible</span> using HTML5 semantic markup and SEO techniques.<br>
           <span>Immersive</span> through Sass preprocessed stylesheets and <br>
