--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <p>
           I'm a Front-End Web Developer focused on Responsive Web Design and User Experience.<br>
           I code webpages that are: <br>
-          <span>Accessible</span> using HTML5 semantic markup and SEO techniques.<br>
+          <span>Accessible</span> by using HTML5 semantic markup and SEO techniques.<br>
           <span>Immersive</span> through Sass preprocessed stylesheets and <br>
           <span>Engaging</span> via Javascript algorithms.
           <br><br>
