--- a/index.html
+++ b/index.html
@@ -415,9 +415,15 @@
           <figure>
             <img src="img/mkansi.png" alt="Orich trading & projects">
           </figure>
-          <a href="https://shakexsempe.github.io/ngoveni-construction/" target="_blank">view website</a>
+          <a href="https://ngoveni-construction.netlify.app/" target="_blank">view website</a>
         </div>
-        
+        <div class="work-item">
+          <h2 class="work-title">Thato Technical Drawings</h2>
+          <figure>
+            <img src="img/thato2-logo.png" alt="Orich trading & projects">
+          </figure>
+          <a href="https://thato-technical-drawings.netlify.app/" target="_blank">view website</a>
+        </div>
       </div>
     </div>
   </section>
