work items titles and links

--- a/index.html
+++ b/index.html
@@ -394,35 +394,48 @@
       </div>
       <div class="work-items">
         <!-- ORICH -->
-        <div class="work-item">
-          <h2 class="work-title">Orich Trading & projects</h2>
+        <div data-scroll class="work-item">
+          <div class="work-title">
+          <h2 >Orich Trading & projects</h2>
+          <a href="https://shakexsempe.github.io/orich-trading/">orichtrading-projects.co.za</a>
+        </div>
           <figure>
             <img src="img/orich.jpg" alt="Orich trading & projects">
           </figure>
-          <a href="https://shakexsempe.github.io/orich-trading/" target="_blank">view website</a>
+          <a class="view-site-btn" href="https://shakexsempe.github.io/orich-trading/" target="_blank">view website</a>
         </div>
         <!-- MUNCH UP -->
-        <div class="work-item">
-          <h2 class="work-title">Munch Up</h2>
+        <div data-scroll class="work-item">
+          <div class="work-title">
+          <h2>Munch Up</h2>
+          <a href="https://munch-up.netlify.app/">munch-up.netlify.app/</a>
+        </div>
           <figure>
             <img src="img/munch-logo-min.jpg" alt="Munch Up-logo">
           </figure>
-          <a href="https://munch-up.netlify.app/" target="_blank">view website</a>
+          <a class="view-site-btn" href="https://munch-up.netlify.app/" target="_blank">view website</a>
         </div>
-        <!-- MUNCH UP -->
-        <div class="work-item">
+        <!-- NGOVENI -->
+        <div data-scroll class="work-item">
+          <div class="work-title">
           <h2 class="work-title">Ngoveni Construction</h2>
+          <a href="https://ngoveni-construction.netlify.app/">ngoveni-construction.netlify.app/</a>
+        </div>
           <figure>
             <img src="img/mkansi.png" alt="Orich trading & projects">
           </figure>
-          <a href="https://ngoveni-construction.netlify.app/" target="_blank">view website</a>
+          <a class="view-site-btn" href="https://ngoveni-construction.netlify.app/" target="_blank">view website</a>
         </div>
-        <div class="work-item">
+        <!-- THATO -->
+        <div data-scroll class="work-item">
+          <div class="work-title">
           <h2 class="work-title">Thato Technical Drawings</h2>
+          <a href="https://thato-technical-drawings.netlify.app/">thato-technical-drawings.netlify.app/</a>
+        </div>
           <figure>
             <img src="img/thato2-logo.png" alt="Orich trading & projects">
           </figure>
-          <a href="https://thato-technical-drawings.netlify.app/" target="_blank">view website</a>
+          <a class="view-site-btn" href="https://thato-technical-drawings.netlify.app/" target="_blank">view website</a>
         </div>
       </div>
     </div>
