--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
         <div data-scroll class="work-item">
           <div class="work-title">
           <h2 class="work-title">Thato Technical Drawings</h2>
-          <a href="https://thato-technical-drawings.netlify.app/">thato-technical-drawings.netlify.app/</a>
+          <a href="https://thato-technical-drawings.netlify.app/">thato-tech-drawings.netlify.app/</a>
         </div>
           <figure>
             <img src="img/thato2-logo.png" alt="Orich trading & projects">
