--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
         <div data-scroll class="work-item">
           <div class="work-title">
           <h2 >Orich Trading & projects</h2>
-          <a href="https://shakexsempe.github.io/orich-trading/">orichtrading-projects.co.za</a>
+          <a href="https://https://orich-trading-projects.netlify.app/">orichtrading-projects.netlify.app/</a>
         </div>
           <figure>
             <img src="img/orich.jpg" alt="Orich trading & projects">
