nav links order

--- a/index.html
+++ b/index.html
@@ -64,33 +64,36 @@
               </a>
             </div>
             <ul class="links">
-               <!-- ABOUT LINK -->
-               <li>
-                <i class="fas fa-user-circle"></i>
-                <a href="#about" title="about Boitumelo Sempe" data-after="About" class="scroll-link scroll-li">about</a>
-                </li>
-                <!-- CONTACT LINK -->
+              <!-- SKILLS LINK -->
               <li>
-                <i class="fas fa-address-book"></i>
-                <a href="#contact" title="contact-info" data-after="Contact" class="scroll-link scroll-li">contact</a>
+                <i class="fas fa-lightbulb"></i>
+                <a href="#skills" title="web development skills" data-after="skills"
+                  class="scroll-link scroll-li">skills</a>
               </li>
-                      
               <!-- PROJECTS[PORTFOLIO] LINK -->
               <li>
                 <i class="fab fa-github"></i>
-                <a href="#projects" title="github repositories" data-after="portfolio" class="scroll-link scroll-li">portfolio</a>
+                <a href="#projects" title="github repositories" data-after="portfolio"
+                  class="scroll-link scroll-li">portfolio</a>
               </li>
               <!-- WORK[PROJECTS] LINK -->
               <li>
                 <i class="fa-solid fa-earth-africa"></i>
-                <a href="#work" title="github repositories" data-after="Projects" class="scroll-link scroll-li">projects</a>
+                <a href="#work" title="github repositories" data-after="Projects"
+                  class="scroll-link scroll-li">projects</a>
               </li>
-             <!-- SKILLS LINK -->
-             <li >
-              <i class="fas fa-lightbulb"></i>
-              <a href="#skills" title="web development skills" data-after="skills"class="scroll-link scroll-li">skills</a>
-            </li>
-            <!-- SOCIALS -->
+              <!-- ABOUT LINK -->
+              <li>
+                <i class="fas fa-user-circle"></i>
+                <a href="#about" title="about Boitumelo Sempe" data-after="About"
+                  class="scroll-link scroll-li">about</a>
+              </li>
+              <!-- CONTACT LINK -->
+              <li>
+                <i class="fas fa-address-book"></i>
+                <a href="#contact" title="contact-info" data-after="Contact" class="scroll-link scroll-li">contact</a>
+              </li>
+              <!-- SOCIALS -->
               <li>
                 <i class="fas fa-user-friends"></i>
                 <a href="#footer" title="social-links" data-after="Socials" class="scroll-link scroll-li">socials</a>
