--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
       <nav id="navbar">
         <div class="brand">
           <a href="#home" title="shakex sempe" class="scroll-link">
-            <h1><span>Shakex</span>Sempe</h1>
+            <!-- <h1><span>Shakex</span>Sempe</h1> -->
+            <figure class="brand-logo">
+              <img src="img/shakex-brand-logo.jpg" alt="Shakex Sempe logo">
+            </figure>
           </a>
         </div>
         <div class="nav-list">
@@ -60,7 +63,7 @@
           <div class="links-container">
             <div class="nav-logo">
               <a href="#home" id="nav-logo">
-                <img src="img/shakex-logo-min.png" alt="Shakex Sempe logo" loading="lazy">
+                <img src="img/shakex-brand-logo.jpg" alt="Shakex Sempe logo" loading="lazy">
               </a>
             </div>
             <ul class="links">
