--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
         <!-- ORICH -->
         <div data-scroll class="work-item">
           <div class="work-title">
-          <h2 >Orich Trading & projects</h2>
+          <h2 >Orich Trading & projects&trade;</h2>
           <a href="https://https://orich-trading-projects.netlify.app/">orichtrading-projects.netlify.app/</a>
         </div>
           <figure>
@@ -413,8 +413,8 @@
         <!-- MUNCH UP -->
         <div data-scroll class="work-item">
           <div class="work-title">
-          <h2>Munch Up</h2>
-          <a href="https://munch-up.netlify.app/">munch-up.netlify.app/</a>
+          <h2>Munch Up&trade;</h2>
+          <a href="https://munch-up.netlify.app/" target="_blank" >munch-up.netlify.app/</a>
         </div>
           <figure>
             <img src="img/munch-logo-min.jpg" alt="Munch Up-logo">
@@ -424,8 +424,8 @@
         <!-- NGOVENI -->
         <div data-scroll class="work-item">
           <div class="work-title">
-          <h2 class="work-title">Ngoveni Construction</h2>
-          <a href="https://ngoveni-construction.netlify.app/">ngoveni-construction.netlify.app/</a>
+          <h2 class="work-title">Ngoveni Construction&trade;</h2>
+          <a href="https://ngoveni-construction.netlify.app/" target="_blank" >ngoveni-construction.netlify.app/</a>
         </div>
           <figure>
             <img src="img/mkansi.png" alt="Orich trading & projects">
@@ -435,8 +435,8 @@
         <!-- THATO -->
         <div data-scroll class="work-item">
           <div class="work-title">
-          <h2 class="work-title">Thato Technical Drawings</h2>
-          <a href="https://thato-technical-drawings.netlify.app/">thato-tech-drawings.netlify.app/</a>
+          <h2 class="work-title">Thato Technical Drawings&copy;</h2>
+          <a href="https://thato-technical-drawings.netlify.app/" target="_blank" >thato-tech-drawings.netlify.app/</a>
         </div>
           <figure>
             <img src="img/thato2-logo.png" alt="Orich trading & projects">
