--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
         <div data-scroll class="work-item">
           <div class="work-title">
           <h2 >Orich Trading & projects&trade;</h2>
-          <a href="https://https://orich-trading-projects.netlify.app/">orichtrading-projects.netlify.app/</a>
+          <a href="https://orich-trading-projects.netlify.app/" target="_blank">orichtrading-projects.netlify.app/</a>
         </div>
           <figure>
             <img src="img/orich.jpg" alt="Orich trading & projects">
