--- a/index.html
+++ b/index.html
@@ -457,11 +457,9 @@
         </div>
         <div class="article-container" data-scroll>
         <article class="about-article">
-          <p id="intro">Boitumelo 'Shakex' Sempe is a Front-End Web Developer and an International Relations Graduate
-            from University of Pretoria
-            having gained
-            his A-levels from the
-            International School of South Africa.</p>
+          <p id="intro">Boitumelo 'Shakex' Sempe is a freelance Front-End Web Developer specializing in responsive landing and portfolio webpages
+            suited for small businesses and individuals alike.
+             </p>
 
           <p class="about-body">I worked as a Customer Care agent at the Compensation Fund (Department of Labour)
             and in 2019 enrolled in the online coding bootcamp
@@ -479,16 +477,16 @@
           <p class="about-body">I am currently learning the MERN stack which I aim to build full stack web products.
           </p>
         </article>
-        <button id="readBtn" title="more about boitumelo">read more</button>
+        <button id="readBtn" title="More About Boitumelo">read more</button>
 
         <article id="cv">
-          <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" title='linkedin' class="fcc-link">
+          <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" title='Linkedin profile' class="fcc-link">
             <i class="fab fa-linkedin-in" aria-hidden="true"></i>Linkedin
           </a>
-          <a href="forms/form.html" title="request cv" target="_blank" class="fcc-link">
+          <a href="forms/form.html" title="Request CV" target="_blank" class="fcc-link">
             <i class="fas fa-user-graduate"></i>request cv
           </a>
-          <a href="https://github.com/ShakexSempe" title="github" target="_blank" id="profile-link">
+          <a href="https://github.com/ShakexSempe" title="Github" target="_blank" id="profile-link">
             <i class="fab fa-github"></i>github
           </a>
         </article>
