--- a/index.html
+++ b/index.html
@@ -457,10 +457,13 @@
         </div>
         <div class="article-container" data-scroll>
         <article class="about-article">
-          <p id="intro">Boitumelo 'Shakex' Sempe is a freelance Front-End Web Developer specializing in responsive landing and portfolio webpages
+          <p id="intro">Boitumelo 'Shakex' Sempe is a freelance Front-End Web Developer specializing in responsive
+            landing and portfolio webpages
             suited for small businesses and individuals alike.
-             </p>
-
+          </p>
+          <p>
+            I'm an International Relations (Bpolsci) graduate from the University of Pretoria having gained my A-levels from the International School of South Africa
+          </p>
           <p class="about-body">I worked as a Customer Care agent at the Compensation Fund (Department of Labour)
             and in 2019 enrolled in the online coding bootcamp
             <a href="https://www.freecodecamp.org/boitumelo-sempe" target="_blank" class="fcc-link">FreeCodeCamp</a>
