--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
                 <a href="#skills" title="web development skills" data-after="skills"
                   class="scroll-link scroll-li">skills</a>
               </li>
-              <!-- PROJECTS[PORTFOLIO] LINK -->
-              <li>
-                <i class="fab fa-github"></i>
-                <a href="#projects" title="github repositories" data-after="portfolio"
-                  class="scroll-link scroll-li">portfolio</a>
-              </li>
               <!-- WORK[PROJECTS] LINK -->
               <li>
                 <i class="fa-solid fa-earth-africa"></i>
                 <a href="#work" title="github repositories" data-after="Projects"
                   class="scroll-link scroll-li">projects</a>
+              </li>
+              <!-- PROJECTS[PORTFOLIO] LINK -->
+              <li>
+                <i class="fab fa-github"></i>
+                <a href="#projects" title="github repositories" data-after="portfolio"
+                  class="scroll-link scroll-li">portfolio</a>
               </li>
               <!-- ABOUT LINK -->
               <li>
@@ -370,7 +370,69 @@
   
   </section>
   <!--End of Skills section-->
-
+<!-- WORK / PORTFOLIO -->
+<section id="work"> 
+  <div class="work">
+    <div class="work-header">
+      <h1 data-text="projects" class="section-title">pro<span>j</span>ects</h1>
+    </div>
+    <div class="work-items">
+      <!-- ORICH -->
+      <div data-scroll class="work-item">
+        <div class="work-title">
+        <h2 >Orich Trading & projects&trade;</h2>
+        <a href="https://orich-trading-projects.netlify.app/" target="_blank">orichtrading-projects.netlify.app/</a>
+      </div>
+        <figure>
+          <img src="img/orich.jpg" alt="Orich trading & projects">
+        </figure>
+        <a class="view-site-btn" href="https://shakexsempe.github.io/orich-trading/" target="_blank">view website</a>
+      </div>
+      <!-- MUNCH UP -->
+      <div data-scroll class="work-item">
+        <div class="work-title">
+        <h2>Munch Up&trade;</h2>
+        <a href="https://munch-up.netlify.app/" target="_blank" >munch-up.netlify.app/</a>
+      </div>
+        <figure>
+          <img src="img/munch-logo-min.jpg" alt="Munch Up-logo">
+        </figure>
+        <a class="view-site-btn" href="https://munch-up.netlify.app/" target="_blank">view website</a>
+      </div>
+      <!-- NGOVENI -->
+      <div data-scroll class="work-item">
+        <div class="work-title">
+        <h2 class="work-title">Ngoveni Construction&trade;</h2>
+        <a href="https://ngoveni-construction.netlify.app/" target="_blank" >ngoveni-construction.netlify.app/</a>
+      </div>
+        <figure>
+          <img src="img/mkansi.png" alt="Orich trading & projects">
+        </figure>
+        <a class="view-site-btn" href="https://ngoveni-construction.netlify.app/" target="_blank">view website</a>
+      </div>
+      <!-- THATO -->
+      <div data-scroll class="work-item">
+        <div class="work-title">
+        <h2 class="work-title">Thato Technical Drawings&copy;</h2>
+        <a href="https://thato-technical-drawings.netlify.app/" target="_blank" >thato-tech-drawings.netlify.app/</a>
+      </div>
+        <figure>
+          <img src="img/thato2-logo.png" alt="Orich trading & projects">
+        </figure>
+        <a class="view-site-btn" href="https://thato-technical-drawings.netlify.app/" target="_blank">view website</a>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- padding section -->
+<div id="projects-pad" class="section-pad pad-intro">
+  <figure data-scroll>
+    <a title="github contribution activity" href="#projects">
+      <img src="img/git-min.png" loading="lazy" alt="github contribution activity">
+    </a>
+  </figure>
+</div>
+<!-- end of padding section -->
   <!--Projects Section-->
   <section class="link-section" id="projects">
     <div class="projects container">
@@ -383,69 +445,8 @@
     </div>
   </section>
   <!--End of Projects Section-->
-  <!-- padding section -->
-  <div id="projects-pad" class="section-pad pad-intro">
-    <figure data-scroll>
-      <a title="github contribution activity" href="#projects">
-        <img src="img/git-min.png" loading="lazy" alt="github contribution activity">
-      </a>
-    </figure>
-  </div>
-  <!-- end of padding section -->
-  <!-- WORK / PORTFOLIO -->
-  <section id="work"> 
-    <div class="work">
-      <div class="work-header">
-        <h1 data-text="projects" class="section-title">pro<span>j</span>ects</h1>
-      </div>
-      <div class="work-items">
-        <!-- ORICH -->
-        <div data-scroll class="work-item">
-          <div class="work-title">
-          <h2 >Orich Trading & projects&trade;</h2>
-          <a href="https://orich-trading-projects.netlify.app/" target="_blank">orichtrading-projects.netlify.app/</a>
-        </div>
-          <figure>
-            <img src="img/orich.jpg" alt="Orich trading & projects">
-          </figure>
-          <a class="view-site-btn" href="https://shakexsempe.github.io/orich-trading/" target="_blank">view website</a>
-        </div>
-        <!-- MUNCH UP -->
-        <div data-scroll class="work-item">
-          <div class="work-title">
-          <h2>Munch Up&trade;</h2>
-          <a href="https://munch-up.netlify.app/" target="_blank" >munch-up.netlify.app/</a>
-        </div>
-          <figure>
-            <img src="img/munch-logo-min.jpg" alt="Munch Up-logo">
-          </figure>
-          <a class="view-site-btn" href="https://munch-up.netlify.app/" target="_blank">view website</a>
-        </div>
-        <!-- NGOVENI -->
-        <div data-scroll class="work-item">
-          <div class="work-title">
-          <h2 class="work-title">Ngoveni Construction&trade;</h2>
-          <a href="https://ngoveni-construction.netlify.app/" target="_blank" >ngoveni-construction.netlify.app/</a>
-        </div>
-          <figure>
-            <img src="img/mkansi.png" alt="Orich trading & projects">
-          </figure>
-          <a class="view-site-btn" href="https://ngoveni-construction.netlify.app/" target="_blank">view website</a>
-        </div>
-        <!-- THATO -->
-        <div data-scroll class="work-item">
-          <div class="work-title">
-          <h2 class="work-title">Thato Technical Drawings&copy;</h2>
-          <a href="https://thato-technical-drawings.netlify.app/" target="_blank" >thato-tech-drawings.netlify.app/</a>
-        </div>
-          <figure>
-            <img src="img/thato2-logo.png" alt="Orich trading & projects">
-          </figure>
-          <a class="view-site-btn" href="https://thato-technical-drawings.netlify.app/" target="_blank">view website</a>
-        </div>
-      </div>
-    </div>
-  </section>
+  
+  
   <!--About Section-->
   <section class="link-section" id="about">
     
@@ -631,17 +632,17 @@
 
   <div class="input-div">
     <label for="name">name :</label>
-    <input type="text" name="name and lastname" id="username" placeholder="name & surname.." required minlength="2">
+    <input type="text" name="Name" id="username" placeholder="name & surname.." required minlength="2">
   </div>
 
   <div class="input-div">
     <label for="email">email :</label>
-    <input type="email" name="email" id="email" placeholder="your email address.." required>
+    <input type="email" name="Email" id="email" placeholder="your email address.." required>
   </div>
 
   <div class="input-div">
     <label for="message">message :</label>
-    <textarea rows="3" cols="50" minlength="2" name="message" placeholder="leave a message..." id="message" required></textarea>
+    <textarea rows="3" cols="50" minlength="2" name="Message" placeholder="leave a message..." id="message" required></textarea>
   </div>
 
   <button type="submit" title="submit contact form">send email</button>
