--- a/index.html
+++ b/index.html
@@ -446,7 +446,6 @@
   </section>
   <!--End of Projects Section-->
   
-  
   <!--About Section-->
   <section class="link-section" id="about">
     
@@ -518,9 +517,9 @@
           <div class="icon">
             <i class="fas fa-map-marked-alt"></i>
           </div>
-          <h1>Address</h1>
+          <h2>Address</h2>
           <div class="contact-info">
-            <h2>Mahikeng, North West.<span>South Africa</span></h2>
+            <p>Mahikeng, North West.<span>South Africa</span></p>
             <a href="https://goo.gl/maps/8XfqHABUeWN6oEjB6" title="view in google maps" target="_blank"><i class="fas fa-map-pin"></i>..where?</a>
           </div>
         </article>
@@ -529,9 +528,9 @@
           <div class="icon">
             <i class="fas fa-envelope"></i>
           </div>
-          <h1>Email</h1>
+          <h2>Email</h2>
           <div class="contact-info">
-            <h2>shakex@syntex.co.za</h2>
+            <p>shakex@syntex.co.za</p>
             <a href="mailto:shakex@syntex.co.za" title="Send Email to shakex@syntex.co.za"><i class="fas fa-at"></i> ..email me</a>
           </div>
         </article>
@@ -540,9 +539,9 @@
           <div class="icon">
             <i class="fas fa-phone-alt"></i>
           </div>
-          <h1>Phone</h1>
+          <h2>Phone</h2>
           <div id="phone" class="contact-info">
-            <h2>+27 72 600 5104</h2>
+            <p>+27 72 600 5104</p>
             <a href="tel:0726005104" title="call Shakex"><i class="fas fa-phone-alt"></i> ..call me</a>
           </div>
         </article>
