skills dropdown btn

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       </div>
       <!--Dropdown-->
       <div class="dropdown">
-        <button data-scroll onclick="dropdown()" title="full skillset" class="dropbtn">My Skills</button>
+        <button onclick="dropdown()" title="full skillset" class="dropbtn">My Skills</button>
         <div id="myDropdown" class="dropdown-content">
 
           <div class="skills-bottom">
