--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
           <h2>Phone</h2>
           <div id="phone" class="contact-info">
             <p>+27 72 600 5104</p>
-            <a href="tel:0726005104" title="call Shakex"><i class="fas fa-phone-alt"></i> ..call me</a>
+            <a href="tel:+27716876941" title="Contact Shakex"><i class="fas fa-phone-alt"></i> ..whatsapp me</a>
           </div>
         </article>
 
