web hosting skill item

--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@
               <ul>
                 <li>domain name registration</li>
                 <li>domain management</li>
+                <li>domain email management</li>
               </ul>
             </div>
 
