removed fcc link in artice body and hidden overlow

--- a/index.html
+++ b/index.html
@@ -466,8 +466,7 @@
             I obtained my Bachelors degree (Bpolsci) from the University of Pretoria having gained my A-levels at the International School of South Africa
           </p>
           <p class="about-body">I worked as a Customer Care agent at the Compensation Fund (Department of Labour)
-            and in 2019 enrolled in the online coding bootcamp
-            <a href="https://www.freecodecamp.org/boitumelo-sempe" target="_blank" class="fcc-link">FreeCodeCamp</a>
+            and in 2019 enrolled in the online coding bootcamp freeCodeCamp
             where I completed a certificate in Responsive Web Design.
           </p>
 
