--- a/index.html
+++ b/index.html
@@ -483,10 +483,10 @@
         <button id="readBtn" title="More About Boitumelo">read more</button>
 
         <article id="cv">
-          <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" title='Linkedin profile' class="fcc-link">
+          <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" target="_blank" title='Linkedin profile' class="fcc-link">
             <i class="fab fa-linkedin-in" aria-hidden="true"></i>Linkedin
           </a>
-          <a href="forms/form.html" title="Request CV" target="_blank" class="fcc-link">
+          <a href="forms/form.html" title="Request CV" class="fcc-link">
             <i class="fas fa-user-graduate"></i>request cv
           </a>
           <a href="https://github.com/ShakexSempe" title="Github" target="_blank" id="profile-link">
