--- a/index.html
+++ b/index.html
@@ -50,10 +50,7 @@
       <nav id="navbar">
         <div class="brand">
           <a href="#home" title="shakex sempe" class="scroll-link">
-            <!-- <h1><span>Shakex</span>Sempe</h1> -->
-            <figure class="brand-logo">
-              <img src="img/shakex-brand-logo.jpg" alt="Shakex Sempe logo">
-            </figure>
+            <h1><span>Shakex</span>Sempe</h1>
           </a>
         </div>
         <div class="nav-list">
