--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <nav id="navbar">
         <div class="brand">
           <a href="#home" title="shakex sempe" class="scroll-link">
-            <h1><span>Shakex</span>Sempe</h1>
+            <h1>shakex<span>Sempe</span></h1>
           </a>
         </div>
         <div class="nav-list">
