footer .bs21 data-scroll

--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
 </form>
 <!-- end of contact form -->
 
-      <div class="bs21">
+      <div data-scroll class="bs21">
         <p>copyright&copy; Boitumelo Sempe.</p>
         <a title="Shakex Sempe" href="#about">shakex sempe</a>
         <span class="date"></span>
