--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
       <!-- end of social media links -->
 <!-- contact form -->
 <form   class="contact-form" target="_blank" action="https://formsubmit.co/shakexsempe@syntex.co.za" method="POST">
-  <h1 class="footer-section-title contact">Get In Touch</h1>
+  <h1 data-scroll class="footer-section-title contact">Get In Touch</h1>
 
   <div class="input-div">
     <label for="name">name :</label>
