#cta and #cta-header

--- a/index.html
+++ b/index.html
@@ -142,6 +142,9 @@
         </button>
       </div>
     </div>
+    <div id="cta">
+      <button class="cta">lets make your website</button>
+    </div>
 </section>
 <!-- End of Hero Section-->
 
