test: cta transition in on scroll

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       </div>
     </div>
     <div id="cta">
-      <button class="cta">lets make your website</button>
+      <a class="cta" title="View my projects" href="#work">view my work</a>
     </div>
 </section>
 <!-- End of Hero Section-->
