--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
         </button>
       </div>
     </div>
-    <div id="cta">
+    <!-- <div id="cta">
       <a class="cta" title="View my projects" href="#work">view my work</a>
-    </div>
+    </div> -->
 </section>
 <!-- End of Hero Section-->
 
