--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="header container">
       <nav id="navbar">
         <div class="brand">
-          <a href="#home" title="shakex sempe" class="scroll-link">
+          <a href="#home" title="Shakex Sempe navbar logo" class="scroll-link">
             <h1>shakex<span>Sempe</span></h1>
           </a>
         </div>
