--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
         <a href="https://orich-trading-projects.netlify.app/" target="_blank">orichtrading-projects.netlify.app/</a>
       </div>
         <figure>
-          <img src="img/orich.jpg" alt="Orich trading & projects">
+          <img src="img/orich-min.jpg" alt="Orich trading & projects">
         </figure>
         <a class="view-site-btn" href="https://shakexsempe.github.io/orich-trading/" target="_blank">view website</a>
       </div>
@@ -407,7 +407,7 @@
         <a href="https://ngoveni-construction.netlify.app/" target="_blank" >ngoveni-construction.netlify.app/</a>
       </div>
         <figure>
-          <img src="img/mkansi.png" alt="Orich trading & projects">
+          <img src="img/mkansi-min.png" alt="Orich trading & projects">
         </figure>
         <a class="view-site-btn" href="https://ngoveni-construction.netlify.app/" target="_blank">view website</a>
       </div>
@@ -418,7 +418,7 @@
         <a href="https://thato-technical-drawings.netlify.app/" target="_blank" >thato-tech-drawings.netlify.app/</a>
       </div>
         <figure>
-          <img src="img/thato2-logo.png" alt="Orich trading & projects">
+          <img src="img/thato2-logo-min.png" alt="Orich trading & projects">
         </figure>
         <a class="view-site-btn" href="https://thato-technical-drawings.netlify.app/" target="_blank">view website</a>
       </div>
